Fixing menu on iPhone XS

--- a/assets/style.css
+++ b/assets/style.css
@@ -149,7 +149,6 @@ input[type=number]::-webkit-outer-spin-button {
     right:0;
   }
   nav#top {
-    padding: 16px 0;
     height: 43px;
 }
   body .logotype, .blog-nav .title-logo {
